--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-helmet-async": "^2.0.5",
     "react-intersection-observer": "^9.10.3",
     "react-lottie": "^1.2.4",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
