--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-responsive": "^10.0.0",
     "react-router-dom": "^6.24.0",
     "react-slick": "^0.30.2",
+    "react-spring": "^9.7.3",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11"
   },
